--- a/css/global.css
+++ b/css/global.css
@@ -187,3 +187,5 @@ a{ text-decoration: none; color:#000;}
 }
 
 .toplink{ color: #fff;}
+.service-wrapper{ text-align: center; padding-top: 0}
+.service-wrapper img{ max-width: 100%;}
